--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-syntax-highlighter": "^15.5.0",
-    "swr": "^1.2.1"
+    "swr": "^1.2.1",
+    "fast-xml-parser": "^4.0.7",
+    "node-fetch": "^2.3.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^4.1.3",
