--- a/deloughry/package.json
+++ b/deloughry/package.json
@@ -14,19 +14,20 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/base": "^2.26.0",
-    "@sanity/code-input": "^2.29.3",
-    "@sanity/core": "^2.26.0",
-    "@sanity/default-layout": "^2.26.0",
-    "@sanity/default-login": "^2.26.0",
-    "@sanity/desk-tool": "^2.26.0",
+    "@sanity/base": "^2.30.0",
+    "@sanity/code-input": "^2.30.0",
+    "@sanity/core": "^2.30.0",
+    "@sanity/default-layout": "^2.30.0",
+    "@sanity/default-login": "^2.30.0",
+    "@sanity/desk-tool": "^2.30.0",
     "@sanity/eslint-config-studio": "^2.0.0",
     "@sanity/production-preview": "^2.29.3",
-    "@sanity/vision": "^2.27.0",
+    "@sanity/vision": "^2.30.0",
     "eslint": "^8.6.0",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0",
+    "sanity-plugin-cloudinary": "^0.2.2",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {},
