--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "fast-xml-parser": "^4.0.7",
     "groq": "^2.15.0",
     "lru-cache": "^7.3.1",
+    "memory-cache": "^0.2.0",
     "motion": "^10.6.0",
     "netlify-cli": "^9.6.4",
     "next": "12.0.8",
