:sparkles: Added new next image

--- a/web/package.json
+++ b/web/package.json
@@ -15,14 +15,14 @@
     "@sanity/image-url": "^1.0.1",
     "@sanity/types": "^2.26.0",
     "@types/spotify-api": "^0.0.13",
-    "chrome-aws-lambda": "^10.1.0",
+    "chrome-aws-lambda": "^9.1.0",
     "fast-xml-parser": "^4.0.7",
     "groq": "^2.15.0",
     "lru-cache": "^7.3.1",
     "memory-cache": "^0.2.0",
     "motion": "^10.6.0",
-    "netlify-cli": "^9.6.4",
-    "next": "12.0.8",
+    "netlify-cli": "^8.14.1",
+    "next": "^12.2.0",
     "node-fetch": "^2.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
