:bug: fix build

--- a/web/package.json
+++ b/web/package.json
@@ -15,13 +15,14 @@
     "@sanity/image-url": "^1.0.1",
     "@sanity/types": "^2.26.0",
     "@types/spotify-api": "^0.0.13",
+    "@types/lru-cache": "^7.10.10",
     "chrome-aws-lambda": "^9.1.0",
     "fast-xml-parser": "^4.0.7",
     "groq": "^2.15.0",
     "lru-cache": "^7.3.1",
     "memory-cache": "^0.2.0",
     "motion": "^10.6.0",
-    "netlify-cli": "^8.14.1",
+    "netlify-cli": "^10.9",
     "next": "^12.2.0",
     "node-fetch": "^2.3.0",
     "react": "17.0.2",
