--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
     "react-textfit": "^1.1.1"
+  },
+  "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.29.2"
   }
 }
