--- a/web/netlify.toml
+++ b/web/netlify.toml
@@ -1,3 +1,8 @@
 [functions]
 external_node_modules = ["chrome-aws-lambda"]
 included_files = ["templates/**.html", "templates/**.jpg"]
+
+[[redirects]]
+  from = "/.well-known/webfinger"
+  to = "https://phpc.social/.well-known/webfinger?resource=acct:@DrDinoMight@phpc.social"
+  status = 200
