--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,8 @@
     "@sanity/client": "^3.0.3",
     "@sanity/image-url": "^1.0.1",
     "@sanity/types": "^2.26.0",
-    "@types/spotify-api": "^0.0.13",
     "@types/lru-cache": "^7.10.10",
+    "@types/spotify-api": "^0.0.13",
     "chrome-aws-lambda": "^9.1.0",
     "fast-xml-parser": "^4.0.7",
     "groq": "^2.15.0",
@@ -23,10 +23,10 @@
     "memory-cache": "^0.2.0",
     "motion": "^10.6.0",
     "netlify-cli": "^10.9",
-    "next": "^12.2.0",
+    "next": "^13.1.0",
     "node-fetch": "^2.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "swr": "^1.2.1",
     "webmention-rss-discovery-sender": "github:DR-DinoMight/webmention-rss-discovery-sender"
@@ -38,7 +38,7 @@
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
+    "eslint-config-next": "^13.1.0",
     "postcss": "^8.4.5",
     "postcss-preset-env": "^7.2.3",
     "tailwindcss": "^3.0.16",
